# free-wispr-flow

./: .gitignore  ARCHITECTURE.md  BUILD_PIPELINE.md  LICENSE  PROJECT_LOG.md  README.md  build.sh  installer.iss  launcher.py  pyproject.toml  uttr-win.spec
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
Casks/: uttr.rb
Swift/: HotkeyManager.swift  SettingsManager.swift  SettingsTabView.swift  TranscriptionServerClient.swift  uttr.swift
Swift/Transcription/: TranscriptionProvider.swift
bench/: run.sh
bench/Sources/bench/: Benchmark.swift
benchmarks/: PARAKEET_BENCHMARK.md  benchmark_providers.py  prep_golden.py  record_samples.py  smoke_unload.py
benchmarks/golden/: benchmark_results.txt
benchmarks/samples/: benchmark_results.txt  long.txt  medium.txt  short.txt
docs/: PACKAGING_SUMMARY.md  getting-started.md  releasing.md
docs/homebrew/: uttr.rb
src/uttr_win/: app.py  audio.py  gpu_setup.py  history.py  hotkey.py  logger.py  paste.py  settings.py  sounds.py
src/uttr_win/transcription/: __init__.py  base.py  factory.py  faster_whisper_provider.py  nemo_parakeet_provider.py  onnx_parakeet_provider.py
src/uttr_win/ui/: history_window.py  settings_window.py
stt-server-py/: config.py  parakeet_STTProvider.py  pyproject.toml  settings.yaml  stt.py  transcription_server.py
uttr.xcodeproj/: project.pbxproj
